# protobuf-example

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt  app.cpp  message.proto  message_pb2.py
